--- a/app/views/calculation_views/random_results.html.erb
+++ b/app/views/calculation_views/random_results.html.erb
@@ -7,4 +7,5 @@
   <dt>Random Number</dt>
   <dd><%= @random_num%></dd>
 </dl>
-<div> <a href="/random/new">Pick another random number</a></div>
+<a href="/random/new">Pick another random number</a></div>
+<div>
